2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved the openvas_certificates module from
	openvas-client/src/openvas-lib/.

	* base/openvas_certificates.c, base/openvas_certificates.h: Moved from
	openvas-client/src/openvas-lib/.

2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved the severity_filter module from openvas-client/src/util.

	* src/util/severity_filter.c, src/util/severity_filter.h: Moved from
	openvas-client/src/util.

2009-09-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_misc_funcs.c, nasl/nasl_init.c,
	misc/services.h, misc/services.c, misc/services1.c,
	misc/scanners_utils.h, misc/resolve.h, misc/plugutils.h,
	misc/plugutils.c, misc/network.c, misc/ids_send.h,
	misc/ids_send.c: Renamed NESSUS to OPENVAS.

2009-09-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_udp.h, nasl/nasl_tcp.h, nasl/nasl_scanner_glue.h,
	nasl/nasl_raw.h, nasl/nasl_ip.h, nasl/nasl_icmp.h, misc/rand.h,
	misc/comm.h: Replace NESSUS by OPENVAS.

2009-09-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* omp/README.txt, base/README.txt: Fixed dependency info.

	* misc/services1.c, misc/network.c: Renamed Nessus to OpenVAS.

2009-09-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/README.BPF: Moved here from README.BPF.

	* packaging/fedora/openvas-libraries-1.0.1-1.fc8.openvas.spec,
	packaging/fedora/openvas-libraries-1.0.1-Makefile.diff,
	packaging/fedora/openvas-libraries-1.0.1-hg-Makefile.diff,
	packaging/opensuse/openvas-libraries-1.0.1-1.suse102.openvas.spec,
	packaging/opensuse/openvas-libraries-1.0.1-Makefile.diff,
	packaging/opensuse/openvas-libraries-1.0.1-hg-Makefile.diff:
	Removing hopelessly outdated packaging files.

	* MANIFEST: Updated.

2009-09-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* README.BPF: Replaced "nessusd" by "scanner".

	* INSTALL_README: Reworked.

	* configure.in: Upgraded dependency for glib from 2.6